--- a/SalvareDateCV/app/src/main/AndroidManifest.xml
+++ b/SalvareDateCV/app/src/main/AndroidManifest.xml
@@ -8,22 +8,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".proiectandro.LoginActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".robert.crud.ReadActivity" />
-        <activity android:name=".robert.crud.UpdateActivity" />
-        <activity android:name=".proiectandro.AiUitatParolaActivity" />
-        <activity android:name=".proiectandro.ListaEmailActivity" />
-        <activity android:name=".proiectandro.MeniuActivity" />
-        <activity android:name=".proiectandro.ProfilActivity" />
-        <activity android:name=".proiectandro.SignUpActivity" />
-        <activity android:name=".robert.crud.CreateActivity" />
-        <activity android:name=".proiectandro.SchimbareParola"></activity>
+        <activity android:name=".AiUitatParolaActivity" />
+        <activity android:name=".ListaEmailActivity" />
+        <activity android:name=".MeniuActivity" />
+        <activity android:name=".ProfilActivity" />
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".crud.CreateActivity" />
+        <activity android:name=".SchimbareParola"></activity>
     </application>
 
 </manifest>
